# neurose-vton-premium

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
neurose_vton/: config.py  system.py
neurose_vton/api/: main.py
neurose_vton/pipeline/: __init__.py  pipeline.py
neurose_vton/registry/: __init__.py  weights.py
neurose_vton/stages/: __init__.py  base.py  composition.py  diffusion.py  garment.py  garment_backends.py  harmonize.py  person.py  person_backends.py  refine.py
neurose_vton/utils/: determinism.py  logging_utils.py
scripts/: dev_server.sh  healthcheck.sh
tests/: test_capabilities.py  test_person_stage.py  test_registry.py
